--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/packages.config
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/packages.config
@@ -4,7 +4,8 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.it" version="6.2.0" targetFramework="net472" />
-  <package id="jQuery" version="3.3.1" targetFramework="net472" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="jQuery" version="1.11.3" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core.it" version="2.2.2" targetFramework="net472" />
