--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TobaccoNicotineApplication-20191016113404.mdf;Initial Catalog=aspnet-TobaccoNicotineApplication-20191016113404;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SecurityConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\TobaccoNicotineDatabase.mdf" />
     <add name="TobaccoNicotineDatabase" connectionString="metadata=res://*/Models.TobaccoNicotineModel.csdl|res://*/Models.TobaccoNicotineModel.ssdl|res://*/Models.TobaccoNicotineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\TobaccoNicotineDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -22,6 +22,8 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <!-- risolve il problema di passare tramite AJAX float, double, decimal etc -->
+    <globalization uiCulture="en" culture="en-US"/>
   </system.web>
   <system.webServer>
     <modules>
