--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/packages.config
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.it" version="6.2.0" targetFramework="net472" />
+  <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
   <package id="jQuery" version="1.11.3" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
