--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="SecurityConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\TobaccoNicotineDatabase.mdf" />
-    <add name="TobaccoNicotineDatabase" connectionString="metadata=res://*/Models.TobaccoNicotineModel.csdl|res://*/Models.TobaccoNicotineModel.ssdl|res://*/Models.TobaccoNicotineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\TobaccoNicotineDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TobaccoNicotineDatabase" connectionString="metadata=res://*/Models.TobaccoNicotineModel.csdl|res://*/Models.TobaccoNicotineModel.ssdl|res://*/Models.TobaccoNicotineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\TobaccoNicotineDatabase.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
