--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
@@ -354,12 +354,8 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
-    <Content Include="Views\Manage\ManageLogins.cshtml" />
-    <Content Include="Views\Manage\SetPassword.cshtml" />
-    <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Excel\Index.cshtml" />
     <Content Include="Scripts\plugins\bootstrap-colorpicker\css\bootstrap-colorpicker.css.map" />
     <Content Include="Scripts\plugins\bootstrap-colorpicker\css\bootstrap-colorpicker.min.css.map" />
@@ -377,6 +373,7 @@
     <Content Include="Views\Admin\Grant.cshtml" />
     <Content Include="Views\Log\Index.cshtml" />
     <Content Include="Views\Excel\Report.cshtml" />
+    <Content Include="Views\Manage\ChangePhoto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Uploads\Sources\" />
