--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SourceController.cs" />
     <Compile Include="Filters\NoCacheAttribute.cs" />
     <Compile Include="Filters\LogAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -267,6 +268,14 @@
       <DependentUpon>TobaccoNicotineModel.edmx</DependentUpon>
       <LastGenOutput>TobaccoNicotineModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\plugins\dropzone\dist\basic.css" />
+    <Content Include="Scripts\plugins\dropzone\dist\dropzone-amd-module.js" />
+    <Content Include="Scripts\plugins\dropzone\dist\dropzone.css" />
+    <Content Include="Scripts\plugins\dropzone\dist\dropzone.js" />
+    <Content Include="Scripts\plugins\dropzone\dist\min\basic.min.css" />
+    <Content Include="Scripts\plugins\dropzone\dist\min\dropzone-amd-module.min.js" />
+    <Content Include="Scripts\plugins\dropzone\dist\min\dropzone.min.css" />
+    <Content Include="Scripts\plugins\dropzone\dist\min\dropzone.min.js" />
     <Content Include="Sql\Queries\Queries.sql" />
     <Content Include="Sql\Queries\Values.sql" />
     <Content Include="Images\avatar-1.jpg" />
@@ -374,6 +383,8 @@
     <Content Include="Views\Log\Index.cshtml" />
     <Content Include="Views\Excel\Report.cshtml" />
     <Content Include="Views\Manage\ChangePhoto.cshtml" />
+    <Content Include="Views\Source\Index.cshtml" />
+    <Content Include="Scripts\plugins\dropzone\dist\readme.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Uploads\Sources\" />
