--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Web.config
@@ -21,7 +21,8 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <!--maxRequestLength increased to 20 MB-->
+    <httpRuntime targetFramework="4.7.2"  maxRequestLength="20480" />
     <!-- risolve il problema di passare tramite AJAX float, double, decimal etc -->
     <globalization uiCulture="en" culture="en-US" />
   </system.web>
