--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SourceController.cs" />
+    <Compile Include="Controllers\VariableController.cs" />
     <Compile Include="Filters\NoCacheAttribute.cs" />
     <Compile Include="Filters\LogAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -228,6 +229,7 @@
     <Compile Include="Sql\ExportRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\ApplicationVersion.cs" />
+    <Compile Include="Utilities\ArrayUtils.cs" />
     <Compile Include="Utilities\StaticName.cs" />
     <Compile Include="Utilities\ValidateAntiForgeryTokenOnAllPosts.cs" />
   </ItemGroup>
@@ -388,6 +390,7 @@
     <Content Include="Views\Manage\ChangePhoto.cshtml" />
     <Content Include="Views\Source\Index.cshtml" />
     <Content Include="Scripts\plugins\dropzone\dist\readme.md" />
+    <Content Include="Views\Variable\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Uploads\Sources\" />
