--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
@@ -294,6 +294,7 @@
     <Content Include="Scripts\jquery-1.11.3.js" />
     <Content Include="Scripts\jquery-1.11.3.min.js" />
     <Content Include="Scripts\jquery.cookie.js" />
+    <Content Include="Scripts\utils.js" />
     <Content Include="Scripts\plugins\bootstrap-datepicker\css\bootstrap-datepicker.min.css" />
     <Content Include="Scripts\plugins\bootstrap-datepicker\js\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\views\contact.js" />
