--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/TobaccoNicotineApplication.csproj
@@ -244,6 +244,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\TobaccoNicotineDatabase.mdf" />
+    <Content Include="App_Data\TobaccoNicotineDatabase_log.ldf">
+      <DependentUpon>TobaccoNicotineDatabase.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
